fix: Scrollbars vertical margins

--- a/app-test/grails-app/assets/dueuno/elements/pages/ShellUserMenu.css
+++ b/app-test/grails-app/assets/dueuno/elements/pages/ShellUserMenu.css
@@ -38,7 +38,7 @@
 }
 
 #shell-user-menu .offcanvas-body .simplebar-track.simplebar-vertical {
-    padding: .5rem;
+    padding: 0 .5rem 0 .5rem;
 }
 
 #shell-user-menu button:hover,
