--- a/elements-core/grails-app/assets/dueuno/elements/core/PageModal.css
+++ b/elements-core/grails-app/assets/dueuno/elements/core/PageModal.css
@@ -122,5 +122,5 @@
 }
 
 #page-modal-body .simplebar-track {
-    padding: .5rem;
+    padding: 0 .5rem 0 .5rem;
 }
