--- a/elements-core/grails-app/assets/dueuno/elements/pages/ShellMenu.css
+++ b/elements-core/grails-app/assets/dueuno/elements/pages/ShellMenu.css
@@ -52,7 +52,7 @@
 }
 
 #shell-menu .offcanvas-body .simplebar-track.simplebar-vertical {
-    padding: .5rem;
+    padding: 0 .5rem 0 .5rem;
 }
 
 #shell-menu .nav-item {
